--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
-*{
+* {
   font-family: 'Poppins', sans-serif;
 }
+
+html,
 body {
   margin: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
-
+#root{
+  height: 100%;
+}
