--- a/src/pages/game/GamePage.css
+++ b/src/pages/game/GamePage.css
@@ -1,14 +1,31 @@
 .gamePage-page {
-    background-color: aqua;
+    /* background-color: aqua; */
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.gamePage-header{
-    background-color: blue;
+.gamePage-header {
+    /* background-color: rgb(255, 0, 0); */
     height: 18%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
-.gamePage-footer{
-        background-color: rgb(0, 255, 26);
+.gamePage-body {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.gamePage-footer {
+    height: 32%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
