--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -31,6 +31,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: 66%;
+    animation: dropCoin 0.3s linear 1;
 }
 
 #coin-2 {
@@ -57,3 +58,5 @@
         transform: translateY(0px);
     }
 }
+
+
