--- a/src/pages/scores/ScoresPage.css
+++ b/src/pages/scores/ScoresPage.css
@@ -15,6 +15,19 @@
   justify-content: center;
 }
 
+#scores-back-button {
+  background-color: white;
+  color: rgba(63, 63, 63, 1);
+  font-weight: 700;
+  margin-top: 20px;
+  margin-left: 25px;
+}
+
+#scores-upper-page {
+  display: flex;
+  justify-content: center;
+}
+
 #scores-logo {
   height: 100px;
   width: 100px;
