--- a/src/pages/scores/ScoresPage.css
+++ b/src/pages/scores/ScoresPage.css
@@ -25,6 +25,8 @@
 #scores-headline {
   font-size: 24px;
  padding-left: 12px;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 }
 
 #scores-item {
