--- a/src/pages/scores/ScoresPage.css
+++ b/src/pages/scores/ScoresPage.css
@@ -24,17 +24,39 @@
 
 #scores-headline {
   font-size: 24px;
- padding-left: 12px;
-   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding-left: 12px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+ul {
+  padding: 0px;
+  height: 250px;
+  overflow-y: scroll;
+}
+
+ul li {
+  list-style: none;
+}
+
 
 #scores-item {
   background-color: rgba(42, 109, 216, 0.19);
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 12px;
   margin: 10px 12px;
-  padding: 9px;
-  height: 34px;
+  padding: 10px;
+  height: 21px;
+}
+
+ul li:first-child {
+  background: rgba(42, 109, 216, 0.61) !important;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #FFFFFF;
+}
+
+#scores-item p {
+  margin: 0px;
 }
