--- a/src/pages/scores/ScoresPage.css
+++ b/src/pages/scores/ScoresPage.css
@@ -1,6 +1,6 @@
 * {
   font-family: poppins;
-  }
+}
 
 #scores-back-button {
   background-color: white;
@@ -36,13 +36,15 @@
 
 #scores-headline {
   font-size: 24px;
+  margin: 0px;
   padding-left: 12px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 ul {
   padding: 0px;
-  height: 250px;
+  margin: 0px;
+  height: 220px;
   overflow-y: scroll;
 }
 
@@ -63,7 +65,21 @@ ul li {
   height: 21px;
 }
 
-ul li:first-child {
+.total-scores {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+#totalTitle {
+  color: #3F3F3F;
+  font-size: 14px;
+  margin: 0px;
+  padding: 0px;
+
+}
+
+.scoresList ul li:first-child {
   background: rgba(42, 109, 216, 0.61) !important;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: #FFFFFF;
@@ -71,4 +87,20 @@ ul li:first-child {
 
 #scores-item p {
   margin: 0px;
+}
+
+#right-side {
+  display: flex;
+  gap: 10px;
+}
+
+#scores-online-score ul {
+  padding: 0px;
+  margin: 0px;
+  height: 220px;
+  overflow-y: scroll;
+}
+
+ul li {
+  list-style: none;
 }
