--- a/src/pages/scores/ScoresPage.css
+++ b/src/pages/scores/ScoresPage.css
@@ -79,7 +79,7 @@ ul li {
 
 }
 
-.scoresList ul li:first-child {
+.scoresList ul li:first-child, .true {
   background: rgba(42, 109, 216, 0.61) !important;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: #FFFFFF;
@@ -104,3 +104,4 @@ ul li {
 ul li {
   list-style: none;
 }
+
