--- a/src/pages/scores/ScoresPage.css
+++ b/src/pages/scores/ScoresPage.css
@@ -2,6 +2,10 @@
   font-family: poppins;
 }
 
+#scores-page {
+  color: #3F3F3F;
+}
+
 #scores-back-button {
   background-color: white;
   color: rgba(63, 63, 63, 1);
@@ -50,6 +54,8 @@ ul {
 
 ul li {
   list-style: none;
+  font-weight: 100;
+  font-size: 15px !important;
 }
 
 
@@ -79,7 +85,8 @@ ul li {
 
 }
 
-.scoresList ul li:first-child, .true {
+.scoresList ul li:first-child,
+.true {
   background: rgba(42, 109, 216, 0.61) !important;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: #FFFFFF;
@@ -104,4 +111,3 @@ ul li {
 ul li {
   list-style: none;
 }
-
